--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <input type="text" id="name" class="form-control" placeholder="Petra Mustermensch">
     </div>
     <div class="form-group col">
-      <label for="position">Position</label>
-        <input type="text" id="position" class="form-control" placeholder="Position, Position">
+      <label for="position">Position or AG (e.g. Mehrwertsystem)</label>
+        <input type="text" id="position" class="form-control" placeholder="Position">
     </div>
   </div>
   <div class="row">
@@ -88,7 +88,7 @@
       <a style="color:#404040 !important; text-decoration: none !important;" href="mailto:name@transition-muc.de" data-id="exp-mail">name@transition-muc.de</a> |
       <a style="color:#404040 !important; text-decoration: none !important;" href="tel:+491600000000" data-id="exp-number">+49 160 0000000</a> 
       <span data-id="exp-profile-wrapper" style="display: none;">| <a data-id="exp-profile-link" style="color:#c66666 !important; text-decoration: none !important;" href="">LinkedIn</a></span>
-      <p style="margin-bottom: 0"><a style="color:#404040 !important; text-decoration: none !important;" href="https://goo.gl/maps/z9PGW8fjpxu">Transition eG<br>c/o Impact HUB Munich, Gotzinger Straße 8, 81371 München</a></p>
+      <p style="margin-bottom: 0"><a style="color:#404040 !important; text-decoration: none !important;" href="https://goo.gl/maps/z9PGW8fjpxu">Transition eG i.G.<br>c/o Impact HUB Munich, Gotzinger Straße 8, 81371 München</a></p>
       <p style="max-width: 460px; margin-bottom: 0;"><a style="font-size: 18px; color: #c66666 !important; text-decoration: none;" title="Mehr erfahren auf transition-muc.de" href="https://transition-muc.de">Gemeinsam für ein neues München – grün, bunt und fair. Sei dabei!
 &nbsp;<b style="white-space: nowrap;">&#x25b8;&#x200A;transition-muc.de</b></a></p>
     </div>
