--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div id="signature-wrap-de" class="signature-wrap active">
   <br>
   <style>a,a[href],a:hover{text-decoration:none !important;}</style>
-  <div style="font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:13px;color:#404040;background:#fff;line-height:1.4;">
+  <div style="font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;font-size:13px;color:#404040;background:#fff;line-height:1.4;">
     <div style="padding: 4px 0 3px 0;">
       <b data-id="exp-name">Vorname Nachname</b> | <span data-id="exp-position">Position</span><br>
       <a style="color:#404040 !important; text-decoration: none !important;" href="mailto:name@transition-muc.de" data-id="exp-mail">name@transition-muc.de</a> |
